# python-content-tree-generator

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  publish.yml
python_content_tree_generator/: hook.py  update_contents_md.py
tests/: test_hook.py  test_update_contents_md.py
